fix: adjust height of main-baby-genrartor-1 and add new class for cropper-container media

--- a/src/pages/BabyGenrator_page/babyPage.css
+++ b/src/pages/BabyGenrator_page/babyPage.css
@@ -1,8 +1,8 @@
 .main-baby-genrartor-1 {
   width: 100%;
   background-color: #1d2328;
-  height: calc(100vh - 80px);
-  /* height: 89.2vh; */
+  
+  height: 89.2vh;
   display: flex;
   padding-left: 13px;
   padding-right: 13px;
@@ -37,6 +37,7 @@
   max-width: 421px;
   border-radius: 15px;
   border: 3px solid #262a2d;
+  position: relative;
 }
 
 .inner-left-1-babyG-1 {
@@ -811,6 +812,9 @@ n .cropper-container {
     justify-content: center;
     align-items: center;
 
+  }
+  .main-baby-genrartor-midia{
+    height: calc(100vh - 120px);
   }
 
 }
